# RidiculousGameEngine

./: .gitattributes  .gitconfig  .gitignore  CMakeLists.txt  COPYING  README.md
cmake_modules/: CommonCompilers.cmake  CpackConfig.cmake  __version__.cmake
data/: star.xcf
src/: CMakeLists.txt  main.cpp
src/AssetLib/: CMakeLists.txt
src/AssetLib/include/: AssetLib.h
src/AssetLib/src/: ByteArray.cpp
src/Assets/: CMakeLists.txt
src/Assets/include/: AssetManager.h  Assets.h  ByteArray.h  ResourceManager.h
src/Assets/src/: AssetManager.cpp  ByteArray.cpp  ResourceManager.cpp
src/Configurator/: CMakeLists.txt
src/Configurator/include/: ConfigPlatform.h  Configurator.h
src/Configurator/src/: ConfigPlatform.cpp  Configurator.cpp
src/EngineCore/: CMakeLists.txt
src/EngineCore/TidyWorkers/: CMakeLists.txt  TidyThread.cpp
src/EngineCore/TidyWorkers/include/: TidyThread.h  TidyWorker.h
src/EngineCore/Utils/: CMakeLists.txt
src/EngineCore/Utils/include/: BitFields.h  Defines.h  Versatypes.h
src/EngineCore/Utils/src/: BitFields.cpp  Versatypes.cpp
src/EngineCore/include/: AssetManager.h  EngineCore.h  Entity.h  Logger.h  Sandbox.h  Tickable.h
src/EngineCore/src/: AssetManager.cpp  EngineCore.cpp  Entity.cpp  Sandbox.cpp  Tickable.cpp
src/Entities/: CMakeLists.txt
src/Entities/Actors/: CMakeLists.txt
src/Entities/Actors/include/: Actor.h  Actors.h  Monster.h  MonsterFactory.h  Player.h
src/Entities/Actors/src/: Actor.cpp  Monster.cpp  MonsterFactory.cpp  Player.cpp
src/Entities/Statics/: CMakeLists.txt
src/Entities/Statics/include/: Item.h
src/Entities/Statics/src/: Item.cpp
src/Entities/include/: Entities.h  Entity.h  EntityManager.h  Tickable.h  TickingDrawable.h
src/Entities/src/: Entity.cpp  Tickable.cpp  TickingDrawable.cpp
src/TidyWorkers/: CMakeLists.txt
src/TidyWorkers/include/: TidyThread.h  TidyWorker.h  TidyWorkers.h
src/TidyWorkers/src/: TidyThread.cpp  TidyWorker.cpp
src/Utils/: CMakeLists.txt
src/Utils/include/: BitFields.h  Versatypes.h
src/Utils/src/: Versatypes.cpp
